# nibard-rs

./: .gitignore  Cargo.toml  readme.md
example/: Cargo.toml
example/src/: create.rs  list.rs  main.rs  schema.sql  script.rs
nibard/: Cargo.toml
nibard-connection/: Cargo.toml
nibard-connection/examples/: sqlite.rs
nibard-connection/src/: database.rs  de.rs  error.rs  executor.rs  lib.rs  macros.rs  query.rs  row.rs  transaction.rs
nibard-dsl/: Cargo.toml
nibard-dsl/src/: context.rs  lib.rs  statement.rs  util.rs
nibard-dsl/src/create/: alter.rs  create.rs  index.rs  mod.rs
nibard-dsl/src/delete/: mod.rs
nibard-dsl/src/insert/: mod.rs
nibard-dsl/src/query/: column.rs  column_ext.rs  condition.rs  filter.rs  func.rs  impls.rs  join.rs  mod.rs  select.rs  selection.rs  table.rs  table_ext.rs  target.rs  types.rs
nibard-dsl/src/query/expression/: expression_ext.rs  group.rs
nibard-dsl/src/update/: mod.rs
nibard-dsl4/src/: ctx.rs  lib.rs  statement.rs
nibard-dsl4/src/delete/: mod.rs
nibard-dsl4/src/insert/: mod.rs
nibard-dsl4/src/query/: column.rs  column_ext.rs  filter.rs  join.rs  mod.rs  select.rs  selection.rs  table.rs  target.rs
nibard-dsl4/src/query/expression/: binary.rs  expression.rs  expression_ext.rs  group.rs  mod.rs  var.rs
nibard-dsl4/src/update/: mod.rs
nibard-lua/: Cargo.toml
nibard-lua/src/: lib.rs
nibard-query/: Cargo.toml
nibard-query/src/: column.rs  context.rs  error.rs  filter.rs  join.rs  lib.rs  selection.rs  statement.rs  table.rs  target.rs
nibard-query/src/expression/: binary.rs  expression.rs  mod.rs  var.rs
nibard-shared/: Cargo.toml
nibard-shared/src/: de.rs  error.rs  lib.rs  value.rs
nibard/src/: executor_ext.rs  lib.rs  query.rs  query2.rs
sqlquery/: Cargo.toml
sqlquery-database/: Cargo.toml
sqlquery-database/src/: database.rs  executor.rs  lib.rs  query.rs  row.rs  transaction.rs
sqlquery-shared/: Cargo.toml
sqlquery-shared/src/: column_type.rs  dialect.rs  lib.rs  value.rs
sqlquery/src/: _expression.rs  column.rs  column_ext.rs  context.rs  ext_sqlx.rs  lib.rs  select.rs  selection.rs  table.rs  target.rs  types.rs
sqlquery/src/expression/: binary.rs  expression.rs  var.rs
