[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nibard = { path = "../nibard", features = [ "sqlite", "runtime-tokio-rustls", "serialize" ] }
serde = { version = "1", features = [ "derive" ] }
nibard-lua = { path = "../nibard-lua" }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
clap = "3.0.0-beta.2"
prompt = { git = "https://github.com/kildevaeld/prompt-rs" }
mlua = { version = "0.6", features = [ "async", "luajit", "vendored", "serialize","macros"  ]}
