[package]
name = "nibard-lua"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nibard = { path = "../nibard" }
mlua = { version = "0.6", features = [ "async", "luajit", "vendored", "serialize"  ]}
async-stream = "0.3"
futures = "0.3"
tokio = { version = "1", features = [ "sync" ] }