[package]
name = "nibard-shared"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", optional = true, features = [ "derive" ] }
chrono = { version = "0.4", optional = true }
thiserror = "1"

[features]
default = []
json = [ "serde" ]
time = [ "chrono" ]