[package]
name = "nibard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nibard-shared = { path = "../nibard-shared" }
nibard-query = { path = "../nibard-query" }
nibard-connection = { path = "../nibard-connection" }
futures = {version = "0.3"}
async-stream = "0.3"

[features]
default = ["sqlite", "postgres", "mysql"]
sqlite = [ "nibard-connection/sqlite" ]
postgres = [ "nibard-connection/postgres" ]
mysql = [ "nibard-connection/mysql" ]
time = ["nibard-connection/time" ]