[package]
name = "sqlquery"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
sqlquery-shared = { path = "../sqlquery-shared" }
# sqlx = { version = "0.5", optional = true }

# [features]
# default = ["sqlx"]
# # sqlx-sqlite = ["sqlx", "sqlx/sqlite"]

# [dev-dependencies]
# sqlx = { version = "0.5", features = ["runtime-tokio-rustls"]}